[project]
name = "hass-repl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2026.6.1",
    "ipython>=8.18.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
client = [
    "aiohttp>=3.9",
    "prompt-toolkit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
